--- a/donkeys.html
+++ b/donkeys.html
@@ -10,7 +10,7 @@
                     <br> they have an impressive memory
                     <br> they can communicate through vocalisations
                 </p>
-                <img src="https://en.wikipedia.org/wiki/Donkey#/media/File:Donkey_in_Clovelly,_North_Devon,_England.jpg">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Donkey_in_Clovelly%2C_North_Devon%2C_England.jpg">
             </h1>
         </body>
     </head>
