--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
                     <br> they have an impressive memory
                     <br> they can communicate through vocalisations
                 </p>
+                <ol>
+                    <li>donkeys protect other animals</li>
+                    <li>express emotions through their face</li>
+                </ol>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Donkey_in_Clovelly%2C_North_Devon%2C_England.jpg">
             </h1>
         </body>
