--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title> My first webpage</title>
         </head>
         <body>
-            <h1>Fun facts about donkeys<h1>
+            <h1>Fun facts about donkeys</h1>
                 <p> donkeys have and exeptional sence of smell
                     <br> they are very intelligent 
                     <br> they have an impressive memory
