--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
                     <li>donkeys protect other animals</li>
                     <li>express emotions through their face</li>
                 </ol>
+                <p> there are over 100 breed of donkeys they vary in colors, size, and coat type. They originated in africa and have been used for labor for over 5,000 years.
+                </p>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Donkey_in_Clovelly%2C_North_Devon%2C_England.jpg">
             </h1>
         </body>
