added a background color

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title> My first webpage</title>
         </head>
-        <body>
+        <body style="background-color:antiquewhite;">
             <h1>Fun facts about donkeys</h1>
                 <p> donkeys have and exeptional sence of smell
                     <br> they are very intelligent 
