added semantic tags

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <title> My first webpage</title>
         </head>
-        <body style="background-color:antiquewhite;">
-            <h1>Fun facts about donkeys</h1>
+        <body style="background-color:antiquewhite;">3
+              <h1>Fun facts about donkeys</h1>
+              <main>
                 <p> donkeys have and exeptional sence of smell
                     <br> they are very intelligent 
                     <br> they have an impressive memory
@@ -16,7 +17,14 @@
                 </ol>
                 <p> There are over 100 breed of donkeys they vary in colors, size, and coat type. They originated in africa and have been used for labor for over 5,000 years.
                 </p>
+            </main>
+            <figures>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Donkey_in_Clovelly%2C_North_Devon%2C_England.jpg">
+                </figures>
+                <br>
+                <nav>
+                    <a href= "https://habitatforhorses.org/news-and-stories/interesting-donkey-facts?gad_source=1&gad_campaignid=17485138794&gclid=Cj0KCQjw0qTCBhCmARIsAAj8C4blHxJMIPfhGb8SSXnjFUV3PPwgLBRp4Hj-mf60bYrEHaq09Owqe9gaAqjYEALw_wcB" alt="link">Intresting Facts</a>
+                    </nav>
             </h1>
         </body>
     </head>
