added lable and input

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title> My first webpage</title>
         </head>
-        <body style="background-color:antiquewhite;">3
+        <body style="background-color:antiquewhite;">
               <h1>Fun facts about donkeys</h1>
               <main>
                 <p> donkeys have and exeptional sence of smell
@@ -17,6 +17,14 @@
                 </ol>
                 <p> There are over 100 breed of donkeys they vary in colors, size, and coat type. They originated in africa and have been used for labor for over 5,000 years.
                 </p>
+                <form action="/submit" methods="POST">
+                    <label for="main">main</label>
+                    <input type="text" id="name" name="name"
+
+
+
+
+                </form>
             </main>
             <figures>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Donkey_in_Clovelly%2C_North_Devon%2C_England.jpg">
