change the name for label

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p> There are over 100 breed of donkeys they vary in colors, size, and coat type. They originated in africa and have been used for labor for over 5,000 years.
                 </p>
                 <form action="/submit" methods="POST">
-                    <label for="main">main</label>
+                    <label for="Name">main</label>
                     <input type="text" id="name" name="name"
 
 
