added email input

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <form action="/submit" methods="POST">
                     <label for="Name">main</label>
                     <input type="text" id="name" name="name"
+                    <input type="Email" id="email" name="email">
 
 
 
