--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                     <input type="text" id="name" name="name"
                     <input type="Email" id="email" name="email">
 
+                    <input type="Submit" value="Submit"
+
 
 
 
