changed text in label

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <form action="/submit" methods="POST">
                     <label for="Name">main</label>
                     <input type="text" id="name" name="name"
-                    <label for="email">main</label>
+                    <label for="email">email</label>
                     <input type="Email" id="email" name="email">
 
                     <input type="Submit" value="Submit"
