--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <p> There are over 100 breed of donkeys they vary in colors, size, and coat type. They originated in africa and have been used for labor for over 5,000 years.
                 </p>
                 <form action="/submit" methods="POST">
-                    <label for="Name">main</label>
+                    <label for="Name">Name</label>
                     <input type="text" id="name" name="name"
-                    <label for="email">email</label>
+                    <label for="email">Email</label>
                     <input type="Email" id="email" name="email">
 
                     <input type="Submit" value="Submit"
