--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
                 <form action="/submit" methods="POST">
                     <label for="Name">Name</label>
                     <input type="text" id="name" name="name"
+
                     <label for="email">Email</label>
                     <input type="Email" id="email" name="email">
+
+                    <label for="test">Test</label>
+                    <input type="radio id=test" name="test">
+                              
 
                     <input type="Submit" value="Submit"
 
