--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
                     <label for="test">Test</label>
                     <input type="radio id=test" name="test">
+
+                    <label for="test2">Pick an option:</label>
+                    <select id="test2" name="test2"
                               
 
                     <input type="Submit" value="Submit"
