added value options

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
                     <label for="test2">Pick an option:</label>
                     <select id="test2" name="test2"
-                              
+                    <option value="one"></option>
+                    <option value="two"></option>
+                    <option value="three"></option>                              
 
                     <input type="Submit" value="Submit"
 
