--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
                     <select id="test2" name="test2"
                     <option value="one"></option>
                     <option value="two"></option>
-                    <option value="three"></option>                              
+                    <option value="three"></option>       
+                    </select> 
+                    <label>
+                    <input type="checkbox" name="test3" value="test3">
+                    test3  
+                    </label>            
 
                     <input type="Submit" value="Submit"
 
