--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </ol>
                 <p> There are over 100 breed of donkeys they vary in colors, size, and coat type. They originated in africa and have been used for labor for over 5,000 years.
                 </p>
-                <form action="/submit" methods="POST">
+                <form action="github.com" methods="POST">
                     <label for="Name">Name</label>
                     <input type="text" id="name" name="name"
 
@@ -36,7 +36,7 @@
                     <label>
                     <input type="checkbox" name="test3" value="test3">
                     test3  
-                    </label>            
+                    </label>                       
 
                     <input type="Submit" value="Submit"
 
