added names to the options and changed characters

--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
                 <p> There are over 100 breed of donkeys they vary in colors, size, and coat type. They originated in africa and have been used for labor for over 5,000 years.
                 </p>
                 <form action="github.com" methods="POST">
-                    <label for="Name">Name</label>
+                    <label for="Name">Name:</label>
                     <input type="text" id="name" name="name"
 
-                    <label for="email">Email</label>
+                    <label for="email">Email:</label>
                     <input type="Email" id="email" name="email">
 
                     <label for="test">Test</label>
-                    <input type="radio id=test" name="test">
+                    <input type="radio" id=test name="test">
 
                     <label for="test2">Pick an option:</label>
                     <select id="test2" name="test2"
-                    <option value="one"></option>
-                    <option value="two"></option>
-                    <option value="three"></option>       
+                    <option value="one">One</option>
+                    <option value="two">Two</option>
+                    <option value="three">Three</option>       
                     </select> 
                     <label>
                     <input type="checkbox" name="test3" value="test3">
