--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <input type="radio" id=test name="test">
 
                     <label for="test2">Pick an option:</label>
-                    <select id="test2" name="test2"
+                    <select id="test2" name="test2">
                      <option value="one">one</option>
                      <option value="two">Two</option>
                      <option value="three">Three</option>       
