--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                     <label for="test2">Pick an option:</label>
                     <select id="test2" name="test2">
-                     <option value="one">one</option>
+                     <option value="one">One</option>
                      <option value="two">Two</option>
                      <option value="three">Three</option>       
                     </select> 
