--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </ol>
                 <p> There are over 100 breed of donkeys they vary in colors, size, and coat type. They originated in africa and have been used for labor for over 5,000 years.
                 </p>
-                <form action="github.com" methods="POST">
+                <form action="github.com" method="POST">
                     <label for="Name">Name:</label>
                     <input type="text" id="name" name="name"
 
