--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </p>
                 <form action="github.com" method="POST">
                     <label for="Name">Name:</label>
-                    <input type="text" id="name" name="name"
+                    <input type="text" id="name" name="name">
 
                     <label for="email">Email:</label>
                     <input type="Email" id="email" name="email">
