added color to h1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         </head>
         <body style="background-color:antiquewhite;">
               <h1>Fun facts about donkeys</h1>
+              <h1 style="color:green;"> Fun facts about donkeys</h1>
               <main>
                 <p> donkeys have and exeptional sence of smell
                     <br> they are very intelligent 
