--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <title> My first webpage</title>
         </head>
         <body style="background-color:antiquewhite;">
-              <h1 style="color:rgb(55, 123, 159);">Fun facts about donkeys</h1> 
+            <header> 
+                <link rel="stylesheet" href="style.css"
+              <h1>Fun facts about donkeys</h1> 
+              </header>
               <main>
                 <p> donkeys have and exeptional sence of smell
                     <br> they are very intelligent 
@@ -26,6 +29,7 @@
 
                     <label for="test">Test</label>
                     <input type="radio" id=test name="test">
+                
 
                     <label for="test2">Pick an option:</label>
                     <select id="test2" name="test2">
