--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         </head>
         <body style="background-color:antiquewhite;">
             <header> 
-                <link rel="stylesheet" href="style.css"
+                <link rel="stylesheet" href="style.css">
               <h1>Fun facts about donkeys</h1> 
               </header>
               <main>
