--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     test3  
                     </label>                       
 
-                    <input type="Submit" value="Submit"
+                    <input type="Submit" value="Submit">
 
 
 
