--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 </form>
             </main>
             <figures>
+                <article> hello<div class= "blur"> text above img</div></article>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Donkey_in_Clovelly%2C_North_Devon%2C_England.jpg">
                 </figures>
                 <br>
