added to the list

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
               </header>
               <main>
                 <p> donkeys have and exeptional sence of smell
-                    <br> they are very intelligent 
-                    <br> they have an impressive memory
-                    <br> they can communicate through vocalisations
+                    
                 </p>
                 <ol>
                     <li>donkeys protect other animals</li>
                     <li>express emotions through their face</li>
+                    <li>they are very intelligent</li>
+                    <li>hey have an impressive memory</li>
+                    <li>they can communicate through vocalisations</li>
                 </ol>
                 <p> There are over 100 breed of donkeys they vary in colors, size, and coat type. They originated in africa and have been used for labor for over 5,000 years.
                 </p>
