--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
               <h1>Fun facts about donkeys</h1> 
               </header>
               <main>
-                <p> There are over 100 breed of donkeys they vary in colors, size, and coat type. They originated in africa and have been used for labor for over 5,000 years.In many countries of the world, and in many situations, they are used as the preferred mode of transport.
-                    donkeys can live for over 50 years and they can be stronger that a horse the same size. They have an incredible memory they can recognize areas and othe donkeys they were with for up to 25 years ago. Donkeys have a keen sence of curiosity they are also very stubborn and this is do to their highly developed sense of self preservation.
+                <p> There are over 100 breed of donkeys they vary in colors, size, and coat type. They originated in africa and have been used for labor for over 5,000 years.
+                    In many countries of the world, and in many situations, they are used as the preferred mode of transport.
+                    donkeys can live for over 50 years and they can be stronger that a horse the same size. 
+                    They have an incredible memory they can recognize areas and othe donkeys they were with for up to 25 years ago. 
+                    Donkeys have a keen sence of curiosity they are also very stubborn and this is do to their highly developed sense of self preservation.
                     
                 </p>
                 <ol>
