--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <body style="background-color:antiquewhite;">
             <header> 
                 <link rel="stylesheet" href="style.css">
+
+                      <div class="container"></div>
+             <div class="item"> The first box</div>
+                  <div class="item"> the second box</div>
+                  <div class="item"> the third box</div>
+
               <h1>Fun facts about donkeys</h1> 
               </header>
               <main>
