--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
             <header> 
                 <link rel="stylesheet" href="style.css">
 
-                      <div class="container"></div>
+                      <div class="container">
              <div class="item"> The first box</div>
                   <div class="item"> the second box</div>
-                  <div class="item"> the third box</div>
+                  <div class="item"> the third box</div></div>
 
               <h1>Fun facts about donkeys</h1> 
               </header>
